  future updates. (RFB)
- bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: makofd() now updates the
  OFD pointer in the DND. (RFB)
- bdos/fs.h bdos/fsdir.c bdos/osmem.c: Fix the '40-folder problem' inherited
  from early Atari TOS. (RFB)
- bios/disk.c: Use disk_rw() internally instead of DMAread(). (VRI)
- bdos/fs.h: Code cleanup: remove unused #defines. (RFB)

2014-03-08
- bdos/fsdir.c include/asm.h include/portab.h: Added new swpcopyw() function
  and improved xgsdtof() a.k.a. Fdatime(). (VRI)
- bios/disk.c bios/disk.h: New flag UNIT_NATFEATS for units managed by NatFeats.
  Our internal drivers are never used for those ones. (VRI)
- bdos/fs.h bdos/fsio.c bdos/fsopnclo.c: Do not check Fopen() mode (R,W,RW)
  in Fread()/Fwrite() - just like Atari TOS. (RFB)

2014-03-09
- bdos/fs.h: Code cleanup: change int to WORD or UWORD as appropriate.  (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: use DOSTIME struct
  in DND, OFD, and xgsdtof(). (RFB)
- bdos/fsglob.c bdos/time.c bdos/time.h: Code cleanup: move time, date to
  time.c & make them UWORDs. (RFB)
- bdos/fs.h bdos/fsdir.c: Code cleanup: use DOSTIME struct in DTAINFO. (RFB)
- bdos/fsdir.c: Removed ugly casts in xgsdtof(). (VRI)
- bdos/fs.h: Change types of CLNO/RECNO to UWORD/ULONG & make them
  typedefs. (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: use DOSTIME
  struct in FCB. (RFB)

2014-03-10
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Fix bug: a cross-directory rename
  inadvertently changed the file date/time. (RFB)

2014-03-16
- Makefile: Show the target RAM usage at the end of build. (VRI)

2014-03-17
- cli/cmdint.c: Fix bugs in EmuCON cp/mv when target is directory. (RFB)
- cli/cmdutil.c: Fix bug: SHOW displayed blank line for zero value. (RFB)
- cli/cmdint.c: Allow user to interrupt EmuCON cp/mv. (RFB)
- bdos/fsdrive.c: Return EDRIVE from ckdrv() for invalid drive. (RFB)
- cli/cmdint.c: Fix is_valid_drive() for drives > 'P'. (RFB)